--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.0.0",
     "body-parser": "1.20.1",
     "cors": "2.8.5",
+    "country-iso-2-to-3": "^1.1.0",
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "helmet": "6.0.1",
