--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,18 @@
 {
-"name": "server",
-"version":"1.0.0",
-"description":"",
-"main": "index.js",
-"type":"module",
-"scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node index.js",
-  "dev": "nodemon index.js"
-},
-"keywords":[],
-"author":"",
-"license": "ISC",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
     "body-parser": "1.20.1",
     "cors": "2.8.5",
     "country-iso-2-to-3": "^1.1.0",
@@ -23,6 +21,8 @@
     "helmet": "6.0.1",
     "mongoose": "6.8.1",
     "morgan": "1.10.0",
-    "nodemon": "2.0.20"
+    "nodemon": "2.0.20",
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   }
 }
